--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,8 @@
 	--success-color: #6ab04c;
 	--warning-color: #f0932b;
 	--danger-color: #eb4d4b;
+  --dark-danger-color: #d63e3b;
+  --border-color: #ddd;
 
   --light-color: #212529;
 	--light-second-color: #727475;
@@ -24,6 +26,11 @@ input {
   border: none;
 }
 
+input[type=submit] {
+  cursor: pointer;
+}
+
+
 html {
   --main-bg-color: var(--light-background);
   --main-color: var(--light-color);
@@ -41,7 +48,8 @@ body {
   font-size: 1.8rem;
   margin: 0;
   padding: 0;
-  background-color: var(--main-bg-color);
+  /* background-color: var(--main-bg-color); */
+  background-color: var(--light-second-background);
   color: var(--main-color);
 }
 
@@ -70,7 +78,7 @@ header {
   position: relative;
   top: 0;
   left: 0;
-  z-index: 100;
+  z-index: 2;
   background-color: var(--main-bg-color);
 }
 .navbar {
@@ -255,6 +263,17 @@ header {
   }
 }
 
+@media (max-width: 300px) {
+  html {
+    font-size: 6px;
+  }
+
+  .logo {
+    display: none;
+  }
+
+}
+
 @media (min-width: 768px) {
   html {
     font-size: 8px;
@@ -267,7 +286,7 @@ header {
 
 @media (min-width: 992px) {
   html {
-    font-size: 8px;
+    font-size: 10px;
   }
 }
 
@@ -302,6 +321,7 @@ header {
   padding: 1rem 2rem;
   text-decoration: none;
   color: inherit;
+  align-items: center;
 }
 
 .dropdown-menu-link:hover {
@@ -368,6 +388,62 @@ header {
   min-height: 80vh;
 }
 
+
+
+/* Subscribe container */
+.subscribe-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 1rem;
+}
+
+.subscribe-container > img {
+  width: 8rem;
+}
+
+@media (max-width: 600px) {
+  .subscribe-container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .subscribe-container > img {
+    display: none;
+  } 
+}
+
+.subscribe-text > p:first-child {
+  font-size: 1.8rem;
+  font-weight: bold;
+}
+
+.subscribe-text > p:not(:first-child){
+  font-size: 1.5rem;
+}
+
+#subscribe-input, #subscribe-submit {
+  margin-top: 1rem;
+  padding: 1rem 2rem;
+  border-radius: 4px;
+}
+
+#subscribe-input {
+  width: 30rem;
+  border: 1px solid var(--main-color);
+}
+
+#subscribe-input:focus {
+  border: 2px solid var(--primary-color);
+}
+
+#subscribe-submit {
+  cursor: pointer;
+  color: var(--second-color);
+  background-color: var(--primary-color);
+}
+
+/* Footer */
 footer {
   font-size: 1.5rem;
   color: var(--second-color);
@@ -415,7 +491,8 @@ footer a {
 }
 
 #go-to-head {
-  display: block;
+  cursor: pointer;
+  display: none;
   position: fixed;
   bottom: 0;
   right: 0;
@@ -430,3 +507,108 @@ footer a {
   font-size: 4rem;
   color: var(--second-color)
 }
+
+#go-to-head:hover {
+  opacity: 1;
+}
+
+/* .loading-wrapper {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top:0;
+  left:0;
+  z-index: 1;
+  background-color: var(--main-bg-color);
+  text-align: center;
+} */
+
+.loading-wrapper {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top:0;
+  left:0;
+  z-index: 10;
+  background-color: var(--main-bg-color);
+  text-align: center;
+}
+
+.loading-gif {
+  /* width: 70%; */
+  position: relative;
+  top: 40%;
+  transform: translateY(-50%);
+}
+
+.loading-logo {
+  position: absolute;
+  top: 2%;
+  left: 2%;
+}
+
+.loading-wrapper > p {
+  position: relative;
+  top: 62%;
+  margin: 0;
+  padding: 0 2rem;
+  font-size: 2rem;
+  color: #606a77;
+  z-index: 1;
+  letter-spacing: 2px;
+}
+
+
+/* Side bar */
+
+.sidebar > p {
+  padding: 1rem 2rem;
+}
+
+@media (max-width: 600px) {
+  .sidebar {
+    display: none;
+  }
+}
+
+.sidebar-title-container {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  align-items: center;
+}
+
+.sidebar-title-container > i {
+  font-size: 4rem;
+}
+
+#user-name {
+  font-weight: bold;
+}
+
+.sidebar-menu {
+  list-style: none;
+  padding: 0;
+}
+
+.sidebar-link {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  padding: 1rem 2rem;
+  text-decoration: none;
+  color: inherit;
+  transition: background-color 0.3s ease-out;
+}
+
+.sidebar-link:hover {
+  background-color: var(--dark-color);
+}
+
+.sidebar-link.active-link {
+  background-color: var(--dark-color);
+}
+
+
+
+
