--- a/assets/css/transaction-detail.css
+++ b/assets/css/transaction-detail.css
@@ -14,9 +14,20 @@
   border-radius: 4px;
 }
 
-
-
 #receiver-name {
   text-transform: uppercase;
   font-weight: bold;
+}
+
+.money-container, .money-container tr {
+  border: none !important;
+}
+
+.money-container td {
+  text-align: right;
+}
+
+#total-money {
+  font-size: 1.8rem;
+  color: var(--danger-color);
 }
