--- a/assets/css/transaction.css
+++ b/assets/css/transaction.css
@@ -1,8 +1,19 @@
 
 .content {
   width: 70%;
+  /* overflow-x: auto; */
+}
+
+.table-responsive-container {
+  width: 100%;
   overflow-x: auto;
 }
+@media (max-width: 800px) {
+  .content {
+    width: 80%;
+  }
+}
+
 @media (max-width: 600px) {
   .content {
     width: 100%;
@@ -17,7 +28,8 @@ table {
 
 table, tr {
   width: max-content;
-  border: 1px solid var(--dark-color);
+  /* border: 1px solid var(--dark-color); */
+  border: 1px solid var(--border-color);
 }
 
 th, td {
@@ -39,6 +51,10 @@ td {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  /* display: inline-block;
+  text-overflow: initial;
+  overflow: initial;
+  white-space: initial; */
 }
 
 .table-row-link {
