--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -79,17 +79,27 @@
 
 .product-item {
   position: relative;
-  background-color: var(--main-bg-color);
-  box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: rgba(255, 255, 255, 0.4);
+  /* background-color: var(--main-bg-color); */
+  /* box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.2); */
   font-size: 1.5rem;
   height: fit-content;
+
+  /* test */
+  cursor: pointer;
 }
 
-/* .product-item:hover {
-  background-color: var(--main-bg-color);
+.product-item:hover {
+  /* background-color: var(--main-bg-color); */
   box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.05);
-} */
+}
 
+
+/* test */
+.product-item * {
+  pointer-events: none;
+}
+/*  */
 
 .product-discount-tag {
   position: absolute;
