--- a/QLBanHang/WebContent/assets/css/product-detail.css
+++ b/QLBanHang/WebContent/assets/css/product-detail.css
@@ -171,6 +171,8 @@ input[type=number]::-webkit-outer-spin-button {
   padding: 4rem 6rem;
   text-align: justify;
   white-space: pre-wrap;
+  letter-spacing: 2px;
+  line-height: 2rem;
 }
 
 
