--- a/QLBanHang/WebContent/assets/css/cart.css
+++ b/QLBanHang/WebContent/assets/css/cart.css
@@ -122,7 +122,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .remove-product-btn {
-  /* display: inline-block; */
+  width: 100%;
   display: block;
   border-radius: 4px;
   text-decoration: none;
@@ -132,6 +132,7 @@ input[type=number]::-webkit-outer-spin-button {
   padding: 0.5rem 1rem;
   margin-top: 1rem;
   text-align: center;
+  cursor: pointer;
 }
 
 .remove-product-btn:hover {
