--- a/QLBanHang/WebContent/assets/css/cart.css
+++ b/QLBanHang/WebContent/assets/css/cart.css
@@ -181,6 +181,7 @@ input[type=number]::-webkit-outer-spin-button {
   color: var(--second-color);
   text-align: center;
   padding: 1.2rem 2rem;
+  border: none;
   border-radius: 5px;
 }
 
