--- a/QLBanHang/WebContent/assets/css/login.css
+++ b/QLBanHang/WebContent/assets/css/login.css
@@ -72,7 +72,7 @@ body {
   display: none;
 }
 
-input[type=text], input[type=password], input[type=submit] {
+input[type=text], input[type=password], input[type=submit], button[type=submit] {
   width: 100%;
   display: inline-block;
   padding: 1.2rem 2rem;
@@ -90,15 +90,17 @@ input[type=text]:focus, input[type=password]:focus {
   border: 1px solid var(--primary-color);
 }
 
-input[type=submit] {
+input[type=submit], button[type=submit] {
   color: var(--second-color);
   background-color: var(--primary-color);
   transition: 0.3s ease-out;
   margin: 3rem 0 0 0;
   border-radius: 50px;
+  cursor: pointer;
+  border: none;
 }
 
-input[type=submit]:hover {
+intput[type=submit]:hover, button[type=submit]:hover {
   opacity: 0.8;
 }
 
