--- a/QLBanHang/WebContent/assets/css/style.css
+++ b/QLBanHang/WebContent/assets/css/style.css
@@ -21,12 +21,12 @@
   box-sizing: border-box;
 }
 
-input {
+input, button {
   outline: none;
   border: none;
 }
 
-input[type=submit] {
+input[type=submit], button {
   cursor: pointer;
 }
 
